# biomechanics-simulator

./: .cursorignore  .gitignore  CMakeLists.txt  I need to implement a biomechanics simulator, what.md  README.md  build-and-run.ps1  build.ps1  imgui.ini  run-e2e.ps1  vcpkg.json
.cursor/rules/: main.md
assets/: README.txt
cmake/: BumpBuildNumber.cmake
docs/: # Human Rig Model – Integration Guide.md  DEBUG_RAGDOLL_THEN_STANDING.md  DEBUG_WALKING.md  MILESTONES.md  PROJECT_STRUCTURE.md  openapi.yaml
include/biomechanics/: Config.hpp  DrawableBodyCount.hpp  HttpControl.hpp  HumanRagdoll.hpp  JoltLayers.hpp  Log.hpp  OpenGLDebugDrawer.hpp  PoseController.hpp  Ragdoll.hpp  Simulator.hpp  SimulatorScene.hpp  Visualizer.hpp
src/: DrawableBodyCount.cpp  HttpControl.cpp  HumanRagdoll.cpp  Log.cpp  OpenGLDebugDrawer.cpp  PoseController.cpp  Ragdoll.cpp  Simulator.cpp  SimulatorScene.cpp  Visualizer.cpp  main.cpp
tests/: CMakeLists.txt  e2e_verification.cpp  run_headless_verify.cmake  smoke_test.cpp
