# Smoke test: link against the same libs and run a minimal check
add_executable(smoke_test smoke_test.cpp)
target_include_directories(smoke_test PRIVATE ${PROJECT_SOURCE_DIR}/include)
if(Bullet_FOUND)
  target_link_libraries(smoke_test PRIVATE ${BULLET_LIBRARIES})
else()
  target_include_directories(smoke_test PRIVATE ${bullet3_SOURCE_DIR}/src)
  target_link_libraries(smoke_test PRIVATE ${BULLET_LIBRARIES})
endif()
add_test(NAME SmokeTest COMMAND smoke_test)
